# Secure-file-transfer-system

./: FltDriver.inf  LICENSE
FltDriver/: Callbacks.c  Communication.c  FltDriver.inf  FltDriver.sln  FltDriver.vcxproj  FltDriver.vcxproj.filters  Logger.c  SecureFilter.c  SecureFilter.h  Utils.c  Whitelist.c  fltMgr.lib
FltDriver/x64/Debug/: FltDriver.cer  FltDriver.inf  FltDriver.sys.recipe  FltDriver.vcxproj.FileListAbsolute.txt
FltDriver/x64/Debug/FltDriver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DrvCat.command.1.tlog  FltDriver.lastbuildstate  Inf2Cat.command.1.tlog  drvcat.read.1.tlog  drvcat.write.1.tlog  inf2cat-expand.13180.read.1.tlog  inf2cat-expand.13180.write.1.tlog  inf2cat-expand.read.1.tlog  inf2cat-expand.write.1.tlog  inf2cat.read.1.tlog  inf2cat.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  signtool.command.1.tlog  signtool.read.1.tlog  (+5 more)
SecureTransferClient/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md
SecureTransferClient/src/: DriverCommunicator.cpp  DriverCommunicator.h  DriverTypes.h  FileTransferManager.cpp  FileTransferManager.h  LoginDialog.cpp  LoginDialog.h  MachineIdHelper.cpp  MachineIdHelper.h  MainWindow.cpp  MainWindow.h  PolicySyncService.cpp  PolicySyncService.h  PolicySyncThread.cpp  PolicySyncThread.h  SocketIOClient.cpp  SocketIOClient.h  WebServiceClient.cpp  WebServiceClient.h  main.cpp
SecureTransferServer/: README.md  package-lock.json  package.json  start.bat  start.sh
SecureTransferServer/src/: app.js
SecureTransferServer/src/database/: db.js
SecureTransferServer/src/routes/: admin.js  auth.js  file.js  files.js  pc.js
SecureTransferServer/src/services/: AuthService.js  FileCleanupService.js  FileStorageService.js  FileTransferService.js  LogService.js  PCManagerService.js
SecureTransferServer/src/websocket/: socketHandler.js
WebAdminGUI/: CLIENT_INTEGRATION.md  README.md  package-lock.json  package.json  start.bat  start.sh
WebAdminGUI/backend/: app.js
WebAdminGUI/backend/config/: database.js
WebAdminGUI/backend/database/: migrations.js
WebAdminGUI/backend/middleware/: auth.js
WebAdminGUI/backend/routes/: admin.js
WebAdminGUI/backend/services/: AdminService.js  LogService.js  PolicyService.js  WhitelistService.js
WebAdminGUI/frontend/: index.html
WebAdminGUI/frontend/css/: style.css
WebAdminGUI/frontend/js/: api.js  app.js  auth.js  clientManager.js  logViewer.js  pcManager.js  policyManager.js  whitelistManager.js
(+2 files in other folders)
